@@ -1,3 +1,8 @@
+2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/KAPVIEW.pm (sigma): Add support for KAPPA 0.14
+
+
 2000-01-28  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Loop.pm (orac_loop_flag): Pod update.
